Caringo interface now working.

--- a/cmip6_object_store/etc/config.ini
+++ b/cmip6_object_store/etc/config.ini
@@ -1,8 +1,11 @@
 [DEFAULT]
-base_dir = %(home)s/cmip6/cmip6-object-store
-object_store_url = https:////
+
+
+[store]
+credentials_file = %(home)s/.credentials/caringo-credentials.json
 
 [datasets]
+base_dir = %(home)s/cmip6/cmip6-object-store
 datasets_file = %(base_dir)s/data.csv
 split_level = 5
-log_base_dir = %(base_dir)/log
+log_base_dir = %(base_dir)s/log
