--- a/cmip6_object_store/etc/config.ini
+++ b/cmip6_object_store/etc/config.ini
@@ -1,11 +1,30 @@
 [DEFAULT]
+base_dir = %(home)s/cmip6/cmip6-object-store
 
+[config_data_types]
+ints = split_level batch_size 
+lists = 
+dicts = 
+floats = batch_volume_limit max_volume
+extra_ints = 
+extra_lists =
+extra_dicts =
+extra_floats = 
+
+[log]
+log_base_dir = %(base_dir)s/log
 
 [store]
 credentials_file = %(home)s/.credentials/caringo-credentials.json
 
 [datasets]
-base_dir = %(home)s/cmip6/cmip6-object-store
-datasets_file = %(base_dir)s/data.csv
+datasets_file = %(base_dir)s/data/cmip6-datasets.csv
+
+[workflow]
 split_level = 5
-log_base_dir = %(base_dir)s/log
+# batch limit in GB
+batch_volume_limit = 200
+run_version = 1.0
+# max volume of all datasets in GB
+max_volume = 200000000
+data_dir = %(base_dir)s/data
