Got chunking working

--- a/cmip6_object_store/etc/config.ini
+++ b/cmip6_object_store/etc/config.ini
@@ -2,10 +2,10 @@
 base_dir = %(home)s/cmip6/cmip6-object-store
 
 [config_data_types]
-ints = split_level batch_size 
+ints = split_level batch_size var_index
 lists = 
 dicts = 
-floats = batch_volume_limit max_volume
+floats = batch_volume_limit max_volume chunk_size
 extra_ints = 
 extra_lists =
 extra_dicts =
@@ -27,4 +27,17 @@ batch_volume_limit = 200
 run_version = 1.0
 # max volume of all datasets in GB
 max_volume = 200000000
+# chunk size limit in MB
+chunk_size = 250
 data_dir = %(base_dir)s/data
+
+[env_vars]
+OMP_NUM_THREADS = 1
+MKL_NUM_THREADS = 1
+OPENBLAS_NUM_THREADS = 1
+VECLIB_MAXIMUM_THREADS = 1
+NUMEXPR_NUM_THREADS = 1
+
+[project:cmip6]
+archive_dir = /badc/cmip6/data
+var_index = -3
