Improved memory testing of task

--- a/cmip6_object_store/etc/config.ini
+++ b/cmip6_object_store/etc/config.ini
@@ -25,7 +25,7 @@ split_level = 5
 # batch limit in GB
 batch_volume_limit = 200
 run_version = 1.0
-# max volume of all datasets in GB
+# max volume of all datasets in MB
 max_volume = 200000000
 # chunk size limit in MB
 chunk_size = 250
