--- a/cmip6_object_store/etc/config.ini
+++ b/cmip6_object_store/etc/config.ini
@@ -30,6 +30,8 @@ max_volume = 200000000
 # chunk size limit in MB
 chunk_size = 250
 data_dir = %(base_dir)s/data
+# max duration for LOTUS jobs, as "hh:mm:ss"
+max_duration = 00:05:00
 
 [env_vars]
 OMP_NUM_THREADS = 1
@@ -39,5 +41,7 @@ VECLIB_MAXIMUM_THREADS = 1
 NUMEXPR_NUM_THREADS = 1
 
 [project:cmip6]
+project_name = cmip6
 archive_dir = /badc/cmip6/data
 var_index = -3
+mapping_catalogue = %(base_dir)s/data/%(project_name)s-hash-mappings.txt
