Moved conversion to ZarrWriter

--- a/cmip6_object_store/etc/config.ini
+++ b/cmip6_object_store/etc/config.ini
@@ -2,7 +2,7 @@
 base_dir = %(home)s/cmip6/cmip6-object-store
 
 [config_data_types]
-ints = split_level batch_size var_index
+ints = split_level batch_size var_index retries
 lists = 
 dicts = 
 floats = batch_volume_limit max_volume chunk_size
@@ -32,6 +32,8 @@ chunk_size = 250
 data_dir = %(base_dir)s/data
 # max duration for LOTUS jobs, as "hh:mm:ss"
 max_duration = 00:05:00
+# number of times retry caringo connections
+retries = 3
 
 [env_vars]
 OMP_NUM_THREADS = 1
