--- a/cmip6_object_store/etc/config.ini
+++ b/cmip6_object_store/etc/config.ini
@@ -21,7 +21,7 @@ credentials_file = %(home)s/.credentials/caringo-credentials.json
 datasets_file = %(base_dir)s/data/cmip6-datasets.csv
 
 [workflow]
-split_level = 5
+split_level = 4
 # batch limit in GB
 batch_volume_limit = 200
 run_version = 1.0
@@ -31,7 +31,7 @@ max_volume = 200000000
 chunk_size = 250
 data_dir = %(base_dir)s/data
 # max duration for LOTUS jobs, as "hh:mm:ss"
-max_duration = 00:05:00
+max_duration = 06:00:00
 # number of times retry caringo connections
 retries = 3
 
@@ -46,4 +46,6 @@ NUMEXPR_NUM_THREADS = 1
 project_name = cmip6
 archive_dir = /badc/cmip6/data
 var_index = -3
-mapping_catalogue = %(base_dir)s/data/%(project_name)s-hash-mappings.txt
+error_catalogue = %(base_dir)s/data/%(project_name)s-errors.pickle
+mapping_catalogue = %(base_dir)s/data/%(project_name)s-hash-mappings.pickle
+zarr_catalogue = %(base_dir)s/data/%(project_name)s-zarrs.pickle
