--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,13 +18,13 @@ repos:
     hooks:
     -   id: black
         language_version: python3
-        args: ["--target-version", "py37"]
+        args: ["--line-length", "88", "--target-version", "py37"]
 -   repo: https://github.com/pycqa/flake8
     rev: 3.8.3
     hooks:
     -   id: flake8
         language_version: python3
-        args: ['--config=setup.cfg']
+        args: ['--max-line-length', '88', '--config=setup.cfg']
 #-   repo: https://github.com/pre-commit/mirrors-autopep8
 #    rev: v1.4.4
 #    hooks:
@@ -50,9 +50,9 @@ repos:
     hooks:
     -   id: check-hooks-apply
     -   id: check-useless-excludes
--   repo: https://github.com/kynan/nbstripout
-    rev: 0.3.7
-    hooks:
-    -   id: nbstripout
-        language_version: python3
-        files: ".ipynb"
+# -   repo: https://github.com/kynan/nbstripout
+#     rev: 0.3.7
+#     hooks:
+#     -   id: nbstripout
+#         language_version: python3
+#         files: ".ipynb"
