--- a/cmip6_object_store/etc/config.ini
+++ b/cmip6_object_store/etc/config.ini
@@ -2,7 +2,7 @@
 base_dir = %(home)s/cmip6/cmip6-object-store
 
 [config_data_types]
-ints = split_level batch_size var_index retries
+ints = split_level batch_size var_index retries n_facets
 lists =
 dicts =
 floats = batch_volume_limit max_volume chunk_size
@@ -16,6 +16,7 @@ log_base_dir = %(base_dir)s/log
 
 [store]
 credentials_file = %(home)s/.credentials/caringo-credentials.json
+endpoint_url = http://cmip6-zarr-o.s3.jc.rl.ac.uk/
 
 [datasets]
 datasets_file = %(base_dir)s/data/cmip6-datasets.csv
@@ -31,7 +32,9 @@ max_volume = 200000000
 chunk_size = 250
 data_dir = %(base_dir)s/data
 # max duration for LOTUS jobs, as "hh:mm:ss"
-max_duration = 06:00:00
+max_duration = 72:00:00
+# job queue on LOTUS
+job_queue = long-serial
 # number of times retry caringo connections
 retries = 3
 
@@ -49,3 +52,4 @@ var_index = -3
 error_catalogue = %(base_dir)s/data/%(project_name)s-errors.pickle
 mapping_catalogue = %(base_dir)s/data/%(project_name)s-hash-mappings.pickle
 zarr_catalogue = %(base_dir)s/data/%(project_name)s-zarrs.pickle
+n_facets = 10
