Added "verify" sub-command

--- a/cmip6_object_store/etc/config.ini
+++ b/cmip6_object_store/etc/config.ini
@@ -51,5 +51,6 @@ archive_dir = /badc/cmip6/data
 var_index = -3
 error_catalogue = %(base_dir)s/data/%(project_name)s-errors.pickle
 mapping_catalogue = %(base_dir)s/data/%(project_name)s-hash-mappings.pickle
+verify_catalogue = %(base_dir)s/data/%(project_name)s-verified.pickle
 zarr_catalogue = %(base_dir)s/data/%(project_name)s-zarrs.pickle
 n_facets = 10
