Added "verify" sub-command

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,12 +13,12 @@ repos:
         language_version: python3
     -   id: debug-statements
         language_version: python3
-# -   repo: https://github.com/ambv/black
-#     rev: 20.8b1
-#     hooks:
-#     -   id: black
-#         language_version: python3
-#         args: ["--line-length", "88", "--target-version", "py37"]
+-   repo: https://github.com/ambv/black
+    rev: 20.8b1
+    hooks:
+    -   id: black
+        language_version: python3
+        args: ["--line-length", "88", "--target-version", "py37"]
 -   repo: https://github.com/pycqa/flake8
     rev: 3.8.3
     hooks:
@@ -30,12 +30,12 @@ repos:
 #    hooks:
 #    -   id: autopep8
 #        args: ['--global-config=setup.cfg','--in-place']
-# -   repo: https://github.com/timothycrosley/isort
-#     rev: 5.0.7
-#     hooks:
-#     -   id: isort
-#         language_version: python3
-#         args: ['--profile', 'black']
+-   repo: https://github.com/timothycrosley/isort
+    rev: 5.0.7
+    hooks:
+    -   id: isort
+        language_version: python3
+        args: ['--profile', 'black']
 #-   repo: https://github.com/pycqa/pydocstyle
 #    rev: 5.0.2
 #    hooks:
