Updated with latest version of datasets list: 1.1

--- a/cmip6_object_store/etc/config.ini
+++ b/cmip6_object_store/etc/config.ini
@@ -19,13 +19,13 @@ credentials_file = %(home)s/.credentials/caringo-credentials.json
 endpoint_url = http://cmip6-zarr-o.s3.jc.rl.ac.uk/
 
 [datasets]
-datasets_file = %(base_dir)s/data/cmip6-datasets.csv
+datasets_file = %(base_dir)s/data/cmip6-datasets-1.1.csv.gz
 
 [workflow]
 split_level = 4
 # batch limit in GB
 batch_volume_limit = 200
-run_version = 1.0
+run_version = 1.1
 # max volume of all datasets in MB
 max_volume = 200000000
 # chunk size limit in MB
