--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -19,12 +19,12 @@ repos:
     -   id: black
         language_version: python3
         args: ["--line-length", "88", "--target-version", "py37"]
--   repo: https://github.com/pycqa/flake8
-    rev: 3.8.3
-    hooks:
-    -   id: flake8
-        language_version: python3
-        args: ['--max-line-length', '88', '--config=setup.cfg']
+#-   repo: https://github.com/pycqa/flake8
+#    rev: 3.8.3
+#    hooks:
+#    -   id: flake8
+#        language_version: python3
+#        args: ['--max-line-length', '88', '--config=setup.cfg']
 #-   repo: https://github.com/pre-commit/mirrors-autopep8
 #    rev: v1.4.4
 #    hooks:
