--- a/cmip6_object_store/etc/config.ini
+++ b/cmip6_object_store/etc/config.ini
@@ -49,8 +49,15 @@ NUMEXPR_NUM_THREADS = 1
 project_name = cmip6
 archive_dir = /badc/cmip6/data
 var_index = -3
-error_catalogue = %(base_dir)s/data/%(project_name)s-errors.pickle
-mapping_catalogue = %(base_dir)s/data/%(project_name)s-hash-mappings.pickle
-verify_catalogue = %(base_dir)s/data/%(project_name)s-verified.pickle
-zarr_catalogue = %(base_dir)s/data/%(project_name)s-zarrs.pickle
+error_pickle = %(base_dir)s/data/%(project_name)s-errors.pickle
+mapping_pickle = %(base_dir)s/data/%(project_name)s-hash-mappings.pickle
+verify_pickle = %(base_dir)s/data/%(project_name)s-verified.pickle
+zarr_pickle = %(base_dir)s/data/%(project_name)s-zarrs.pickle
 n_facets = 10
+
+[intake]
+json_template = %(base_dir)s/cmip6_object_store/etc/intake_template.json.tmpl
+description_template = CEDA intake-esm catalog for Zarr object store for: {project}
+id_template = ceda-zarr-{project}
+json_catalog = %(base_dir)s/data/ceda-zarr-{project}.json
+csv_catalog = %(base_dir)s/data/ceda-zarr-{project}.csv
