Added notebook showing intake usage

--- a/cmip6_object_store/etc/config.ini
+++ b/cmip6_object_store/etc/config.ini
@@ -61,3 +61,4 @@ description_template = CEDA intake-esm catalog for Zarr object store for: {proje
 id_template = ceda-zarr-{project}
 json_catalog = %(base_dir)s/data/ceda-zarr-{project}.json
 csv_catalog = %(base_dir)s/data/ceda-zarr-{project}.csv
+csv_catalog_url = https://raw.githubusercontent.com/cedadev/cmip6-object-store/master/catalogs/ceda-zarr-{project}.csv
