add test project, with code support to override certain workflow variables per-project

--- a/cmip6_object_store/etc/config.ini
+++ b/cmip6_object_store/etc/config.ini
@@ -1,5 +1,5 @@
 [DEFAULT]
-base_dir = %(home)s/cmip6/cmip6-object-store
+base_dir = %(home)s/cmip6-object-store
 
 [config_data_types]
 ints = split_level batch_size var_index retries n_facets
@@ -19,7 +19,8 @@ credentials_file = %(home)s/.credentials/caringo-credentials.json
 endpoint_url = http://cmip6-zarr-o.s3.jc.rl.ac.uk/
 
 [datasets]
-datasets_file = %(base_dir)s/data/cmip6-datasets-1.1.csv.gz
+#datasets_file = %(base_dir)s/data/cmip6-datasets-1.1.csv.gz
+datasets_file = %(base_dir)s/data/cmip6-datasets_2020-10-27.csv
 
 [workflow]
 split_level = 4
@@ -54,6 +55,20 @@ mapping_pickle = %(base_dir)s/data/%(project_name)s-hash-mappings.pickle
 verify_pickle = %(base_dir)s/data/%(project_name)s-verified.pickle
 zarr_pickle = %(base_dir)s/data/%(project_name)s-zarrs.pickle
 n_facets = 10
+
+[project:cmip6_test]
+project_name = cmip6_test
+archive_dir = /badc/cmip6/data
+var_index = -3
+error_pickle = %(base_dir)s/data/%(project_name)s-errors.pickle
+mapping_pickle = %(base_dir)s/data/%(project_name)s-hash-mappings.pickle
+verify_pickle = %(base_dir)s/data/%(project_name)s-verified.pickle
+zarr_pickle = %(base_dir)s/data/%(project_name)s-zarrs.pickle
+bucket_prefix = 00_TEST_
+split_level=1
+n_facets = 10
+#chunk_size = 10
+chunk_size = 1
 
 [intake]
 json_template = %(base_dir)s/cmip6_object_store/etc/intake_template.json.tmpl
