--- a/cmip6_object_store/etc/config.ini
+++ b/cmip6_object_store/etc/config.ini
@@ -25,7 +25,7 @@ datasets_file = %(base_dir)s/data/cmip6-datasets_2020-10-27.csv
 [workflow]
 split_level = 4
 # batch limit in GB
-batch_volume_limit = 200
+batch_volume_limit = 20
 run_version = 1.1
 # max volume of all datasets in MB
 max_volume = 200000000
@@ -34,6 +34,8 @@ chunk_size = 250
 data_dir = %(base_dir)s/data
 # max duration for LOTUS jobs, as "hh:mm:ss"
 max_duration = 72:00:00
+# memory for LOTUS jobs, with units
+memory = 50G
 # job queue on LOTUS
 job_queue = long-serial
 # number of times retry caringo connections
