add support for boolean config options and add option re whether to set permissions or not

--- a/cmip6_object_store/etc/config.ini
+++ b/cmip6_object_store/etc/config.ini
@@ -2,10 +2,12 @@
 base_dir = %(home)s/cmip6-object-store
 
 [config_data_types]
+bools = set_permissions
 ints = split_level batch_size var_index retries n_facets
 lists =
 dicts =
 floats = batch_volume_limit max_volume chunk_size
+extra_bools = 
 extra_ints =
 extra_lists =
 extra_dicts =
@@ -40,6 +42,7 @@ memory = 50G
 job_queue = long-serial
 # number of times retry caringo connections
 retries = 3
+set_permissions = false
 
 [env_vars]
 OMP_NUM_THREADS = 1
