change Lotus submission to use job arrays

--- a/cmip6_object_store/etc/config.ini
+++ b/cmip6_object_store/etc/config.ini
@@ -40,6 +40,8 @@ max_duration = 72:00:00
 memory = 50G
 # job queue on LOTUS
 job_queue = long-serial
+# max number of simultaneous jobs in array
+job_limit = 25
 # number of times retry caringo connections
 retries = 3
 set_permissions = false
