--- a/cmip6_object_store/etc/config.ini
+++ b/cmip6_object_store/etc/config.ini
@@ -1,5 +1,5 @@
-[DEFAULT]
-base_dir = %(home)s/cmip6-object-store
+# [DEFAULT]
+# base_dir = %(home)s/cmip6-object-store
 
 [config_data_types]
 bools = set_permissions
@@ -44,7 +44,10 @@ job_queue = long-serial
 job_limit = 25
 # number of times retry caringo connections
 retries = 3
-set_permissions = false
+#set_permissions = false
+set_permissions = true
+abcunit_db_settings_file = %(base_dir)s/cmip6_object_store/etc/abcunit_db_settings
+default_project = cmip6
 
 [env_vars]
 OMP_NUM_THREADS = 1
@@ -57,20 +60,13 @@ NUMEXPR_NUM_THREADS = 1
 project_name = cmip6
 archive_dir = /badc/cmip6/data
 var_index = -3
-error_pickle = %(base_dir)s/data/%(project_name)s-errors.pickle
-mapping_pickle = %(base_dir)s/data/%(project_name)s-hash-mappings.pickle
-verify_pickle = %(base_dir)s/data/%(project_name)s-verified.pickle
-zarr_pickle = %(base_dir)s/data/%(project_name)s-zarrs.pickle
 n_facets = 10
+bucket_prefix =
 
 [project:cmip6_test]
 project_name = cmip6_test
 archive_dir = /badc/cmip6/data
 var_index = -3
-error_pickle = %(base_dir)s/data/%(project_name)s-errors.pickle
-mapping_pickle = %(base_dir)s/data/%(project_name)s-hash-mappings.pickle
-verify_pickle = %(base_dir)s/data/%(project_name)s-verified.pickle
-zarr_pickle = %(base_dir)s/data/%(project_name)s-zarrs.pickle
 bucket_prefix = 00_TEST_
 split_level=1
 n_facets = 10
